# gopromax2sphere_pybind

./: CMakeLists.txt  README.md  run_test.sh  setup.py
include/maxsphere_library/sublib/: MAX2spherebatch.h  bitmaplib.h
maxsphere/: CMakeLists.txt  __init__.py
maxsphere/_core/: maxsphere.cpp
src/sublib/: MAX2spherebatch.c  bitmaplib.c
